--- a/index.html
+++ b/index.html
@@ -9,16 +9,35 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <!-- Language Selector -->
+    <div class="language-selector-container">
+        <div class="container">
+            <div class="language-selector">
+                <label for="languageSelect">
+                    <i class="fas fa-language"></i> <span data-translate="language">Idioma</span>:
+                </label>
+                <select id="languageSelect" class="language-select">
+                    <option value="pt-BR">Português (Brasil)</option>
+                    <option value="en">English</option>
+                    <option value="es">Español</option>
+                    <option value="zh">中文</option>
+                    <option value="ja">日本語</option>
+                    <option value="ru">Русский</option>
+                </select>
+            </div>
+        </div>
+    </div>
+
     <!-- Header -->
     <header class="header">
         <div class="container">
             <div class="header-content">
                 <div class="logo-section">
                     <i class="fab fa-bitcoin logo-icon"></i>
-                    <h1>Manual Bitcoin-CLI</h1>
+                    <h1 data-translate="title">Manual Bitcoin-CLI</h1>
                 </div>
-                <p class="header-subtitle">Guia completo de comandos do Bitcoin Core v30.0.0 RPC com exemplos práticos em JSON</p>
-                <span class="version-badge">v30.0.0 - 180+ Comandos</span>
+                <p class="header-subtitle" data-translate="subtitle">Guia completo de comandos do Bitcoin Core v30.0.0 RPC com exemplos práticos em JSON</p>
+                <span class="version-badge" data-translate="version">v30.0.0 - 180+ Comandos</span>
             </div>
         </div>
     </header>
@@ -28,7 +47,7 @@
         <div class="container">
             <div class="search-box">
                 <i class="fas fa-search search-icon"></i>
-                <input type="text" id="searchInput" placeholder="Buscar comando... (ex: getblockchaininfo, sendtoaddress)" class="search-input">
+                <input type="text" id="searchInput" data-translate-placeholder="search_placeholder" placeholder="Buscar comando... (ex: getblockchaininfo, sendtoaddress)" class="search-input">
                 <button id="clearSearch" class="clear-search" style="display: none;">
                     <i class="fas fa-times"></i>
                 </button>
@@ -42,8 +61,8 @@
         <div class="info-banner">
             <i class="fas fa-info-circle"></i>
             <div>
-                <strong>Como usar este manual</strong>
-                <p>Manual completo do Bitcoin Core v30.0.0 RPC com 180+ comandos documentados. Use o <strong>Terminal Interativo</strong> para testar comandos com dados simulados e filtros jq. A aba <strong>Referência</strong> lista todos os comandos disponíveis organizados por categoria.</p>
+                <strong data-translate="info_title">Como usar este manual</strong>
+                <p data-translate="info_text">Manual completo do Bitcoin Core v30.0.0 RPC com 180+ comandos documentados. Use o <strong>Terminal Interativo</strong> para testar comandos com dados simulados e filtros jq. A aba <strong>Referência</strong> lista todos os comandos disponíveis organizados por categoria.</p>
             </div>
         </div>
     </div>
@@ -52,28 +71,28 @@
     <div class="container">
         <div class="tabs-container">
             <button class="tab-btn active" data-tab="terminal">
-                <i class="fas fa-terminal"></i> Terminal
+                <i class="fas fa-terminal"></i> <span data-translate="tab_terminal">Terminal</span>
             </button>
             <button class="tab-btn" data-tab="referencia">
-                <i class="fas fa-book"></i> Referência
+                <i class="fas fa-book"></i> <span data-translate="tab_referencia">Referência</span>
             </button>
             <button class="tab-btn" data-tab="blockchain">
-                <i class="fas fa-link"></i> Blockchain
+                <i class="fas fa-link"></i> <span data-translate="tab_blockchain">Blockchain</span>
             </button>
             <button class="tab-btn" data-tab="wallet">
-                <i class="fas fa-wallet"></i> Carteira
+                <i class="fas fa-wallet"></i> <span data-translate="tab_wallet">Carteira</span>
             </button>
             <button class="tab-btn" data-tab="transacoes">
-                <i class="fas fa-exchange-alt"></i> Transações
+                <i class="fas fa-exchange-alt"></i> <span data-translate="tab_transacoes">Transações</span>
             </button>
             <button class="tab-btn" data-tab="rede">
-                <i class="fas fa-network-wired"></i> Rede
+                <i class="fas fa-network-wired"></i> <span data-translate="tab_rede">Rede</span>
             </button>
             <button class="tab-btn" data-tab="mineracao">
-                <i class="fas fa-hammer"></i> Mineração
+                <i class="fas fa-hammer"></i> <span data-translate="tab_mineracao">Mineração</span>
             </button>
             <button class="tab-btn" data-tab="utilitarios">
-                <i class="fas fa-tools"></i> Utilitários
+                <i class="fas fa-tools"></i> <span data-translate="tab_utilitarios">Utilitários</span>
             </button>
         </div>
     </div>
@@ -84,28 +103,28 @@
         <div id="terminal" class="tab-content active">
             <div class="terminal-section">
                 <h2 class="section-title">
-                    <i class="fas fa-terminal"></i> Terminal Interativo Bitcoin-CLI
+                    <i class="fas fa-terminal"></i> <span data-translate="terminal_title">Terminal Interativo Bitcoin-CLI</span>
                 </h2>
-                <p class="section-description">Execute comandos bitcoin-cli simulados e filtre resultados usando sintaxe jq. Os dados são simulados para fins de demonstração.</p>
+                <p class="section-description" data-translate="terminal_description">Execute comandos bitcoin-cli simulados e filtre resultados usando sintaxe jq. Os dados são simulados para fins de demonstração.</p>
 
                 <!-- Command Input -->
                 <div class="command-input-section">
-                    <h3>Executar Comando</h3>
+                    <h3 data-translate="execute_command">Executar Comando</h3>
                     <div class="command-input-group">
                         <div class="command-prefix">bitcoin-cli</div>
                         <input type="text" id="commandInput" placeholder="getblockchaininfo" class="command-input">
                         <button id="executeBtn" class="execute-btn">
-                            <i class="fas fa-play"></i> Executar
+                            <i class="fas fa-play"></i> <span data-translate="execute_btn">Executar</span>
                         </button>
                     </div>
                     <div class="jq-filter-group">
                         <label>
-                            <i class="fas fa-filter"></i> Filtro jq (opcional)
+                            <i class="fas fa-filter"></i> <span data-translate="jq_filter_label">Filtro jq (opcional)</span>
                         </label>
-                        <input type="text" id="jqFilter" placeholder=". | {blocks, difficulty}" class="jq-filter-input">
+                        <input type="text" id="jqFilter" data-translate-placeholder="jq_filter_placeholder" placeholder=". | {blocks, difficulty}" class="jq-filter-input">
                     </div>
                     <div class="examples-section">
-                        <p>Exemplos rápidos:</p>
+                        <p data-translate="examples_title">Exemplos rápidos:</p>
                         <div class="examples-grid">
                             <button class="example-btn" data-cmd="getblockchaininfo" data-filter=".blocks">getblockchaininfo | .blocks</button>
                             <button class="example-btn" data-cmd="getwalletinfo" data-filter=".balance">getwalletinfo | .balance</button>
@@ -119,40 +138,40 @@
                 <!-- jq Guide -->
                 <div class="jq-guide">
                     <h3>
-                        <i class="fas fa-filter"></i> Guia de Filtros jq
+                        <i class="fas fa-filter"></i> <span data-translate="jq_guide_title">Guia de Filtros jq</span>
                     </h3>
                     <div class="jq-examples-grid">
                         <div class="jq-example">
                             <code>.</code>
-                            <p>Retorna o objeto completo</p>
+                            <p data-translate="jq_guide_complete">Retorna o objeto completo</p>
                         </div>
                         <div class="jq-example">
                             <code>.campo</code>
-                            <p>Extrai um campo específico</p>
+                            <p data-translate="jq_guide_field">Extrai um campo específico</p>
                         </div>
                         <div class="jq-example">
                             <code>.campo1, .campo2</code>
-                            <p>Múltiplos campos</p>
+                            <p data-translate="jq_guide_multiple">Múltiplos campos</p>
                         </div>
                         <div class="jq-example">
                             <code>{ campo1, campo2 }</code>
-                            <p>Novo objeto com campos</p>
+                            <p data-translate="jq_guide_object">Novo objeto com campos</p>
                         </div>
                         <div class="jq-example">
                             <code>.[]</code>
-                            <p>Itera sobre array</p>
+                            <p data-translate="jq_guide_array">Itera sobre array</p>
                         </div>
                         <div class="jq-example">
                             <code>[.[] | .campo]</code>
-                            <p>Mapeia campo de array</p>
+                            <p data-translate="jq_guide_map">Mapeia campo de array</p>
                         </div>
                         <div class="jq-example">
                             <code>.[] | select(.amount > 0.5)</code>
-                            <p>Filtra por condição</p>
+                            <p data-translate="jq_guide_filter">Filtra por condição</p>
                         </div>
                         <div class="jq-example">
                             <code>length</code>
-                            <p>Tamanho de array/objeto</p>
+                            <p data-translate="jq_guide_length">Tamanho de array/objeto</p>
                         </div>
                     </div>
                 </div>
@@ -161,17 +180,17 @@
                 <div class="terminal-output-section">
                     <div class="terminal-header">
                         <h3>
-                            <i class="fas fa-code"></i> Saída do Terminal
+                            <i class="fas fa-code"></i> <span data-translate="terminal_output">Saída do Terminal</span>
                         </h3>
                         <button id="clearHistory" class="clear-btn" style="display: none;">
-                            <i class="fas fa-trash"></i> Limpar
+                            <i class="fas fa-trash"></i> <span data-translate="clear_history">Limpar</span>
                         </button>
                     </div>
                     <div id="terminalOutput" class="terminal-output">
                         <div class="terminal-empty">
                             <i class="fas fa-terminal"></i>
-                            <p>Nenhum comando executado ainda</p>
-                            <p class="empty-hint">Digite um comando acima e clique em Executar</p>
+                            <p data-translate="terminal_empty">Nenhum comando executado ainda</p>
+                            <p class="empty-hint" data-translate="terminal_empty_hint">Digite um comando acima e clique em Executar</p>
                         </div>
                     </div>
                 </div>
@@ -181,8 +200,8 @@
         <!-- Referência Tab -->
         <div id="referencia" class="tab-content">
             <div class="reference-section">
-                <h2 class="section-title">Referência Completa</h2>
-                <p class="section-description">Todos os comandos Bitcoin-CLI organizados por categoria</p>
+                <h2 class="section-title" data-translate="reference_title">Referência Completa</h2>
+                <p class="section-description" data-translate="reference_description">Todos os comandos Bitcoin-CLI organizados por categoria</p>
                 <div id="referenceContent" class="commands-list"></div>
             </div>
         </div>
@@ -191,8 +210,8 @@
         <div id="blockchain" class="tab-content">
             <div class="category-section">
                 <div class="category-header">
-                    <span class="category-badge">Bitcoin Core v30.0.0</span>
-                    <p>Comandos para consultar e gerenciar a blockchain local</p>
+                    <span class="category-badge" data-translate="category_blockchain">Bitcoin Core v30.0.0</span>
+                    <p data-translate="category_blockchain_desc">Comandos para consultar e gerenciar a blockchain local</p>
                 </div>
                 <div id="blockchainCommands" class="commands-list"></div>
             </div>
@@ -202,8 +221,8 @@
         <div id="wallet" class="tab-content">
             <div class="category-section">
                 <div class="category-header">
-                    <span class="category-badge">Bitcoin Core v30.0.0</span>
-                    <p>Comandos para gerenciar carteiras, endereços e fundos. Requer carteira carregada.</p>
+                    <span class="category-badge" data-translate="category_wallet">Bitcoin Core v30.0.0</span>
+                    <p data-translate="category_wallet_desc">Comandos para gerenciar carteiras, endereços e fundos. Requer carteira carregada.</p>
                 </div>
                 <div id="walletCommands" class="commands-list"></div>
             </div>
@@ -213,8 +232,8 @@
         <div id="transacoes" class="tab-content">
             <div class="category-section">
                 <div class="category-header">
-                    <span class="category-badge">Transações & PSBT</span>
-                    <p>Comandos para criar, assinar e enviar transações (inclui PSBT)</p>
+                    <span class="category-badge" data-translate="category_transacoes">Transações & PSBT</span>
+                    <p data-translate="category_transacoes_desc">Comandos para criar, assinar e enviar transações (inclui PSBT)</p>
                 </div>
                 <div id="transacoesCommands" class="commands-list"></div>
             </div>
@@ -224,8 +243,8 @@
         <div id="rede" class="tab-content">
             <div class="category-section">
                 <div class="category-header">
-                    <span class="category-badge">Rede P2P</span>
-                    <p>Comandos para gerenciar conexões de rede e peers</p>
+                    <span class="category-badge" data-translate="category_rede">Rede P2P</span>
+                    <p data-translate="category_rede_desc">Comandos para gerenciar conexões de rede e peers</p>
                 </div>
                 <div id="redeCommands" class="commands-list"></div>
             </div>
@@ -235,8 +254,8 @@
         <div id="mineracao" class="tab-content">
             <div class="category-section">
                 <div class="category-header">
-                    <span class="category-badge">Mineração</span>
-                    <p>Comandos para mineração e geração de blocos (regtest)</p>
+                    <span class="category-badge" data-translate="category_mineracao">Mineração</span>
+                    <p data-translate="category_mineracao_desc">Comandos para mineração e geração de blocos (regtest)</p>
                 </div>
                 <div id="mineracaoCommands" class="commands-list"></div>
             </div>
@@ -246,8 +265,8 @@
         <div id="utilitarios" class="tab-content">
             <div class="category-section">
                 <div class="category-header">
-                    <span class="category-badge">Utilitários</span>
-                    <p>Utilitários, controle do servidor, validação e gerenciamento</p>
+                    <span class="category-badge" data-translate="category_utilitarios">Utilitários</span>
+                    <p data-translate="category_utilitarios_desc">Utilitários, controle do servidor, validação e gerenciamento</p>
                 </div>
                 <div id="utilitariosCommands" class="commands-list"></div>
             </div>
@@ -257,15 +276,16 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>Manual Bitcoin-CLI - Guia de Referência Completo</p>
-            <p class="footer-subtitle">Bitcoin Core v30.0.0 RPC - 180+ Comandos Documentados</p>
-            <p class="footer-details">Inclui: Blockchain, Wallet, Transactions, PSBT, Network, Mining, Control, ZMQ</p>
+            <p data-translate="footer_text">Manual Bitcoin-CLI - Guia de Referência Completo</p>
+            <p class="footer-subtitle" data-translate="footer_subtitle">Bitcoin Core v30.0.0 RPC - 180+ Comandos Documentados</p>
+            <p class="footer-details" data-translate="footer_details">Inclui: Blockchain, Wallet, Transactions, PSBT, Network, Mining, Control, ZMQ</p>
         </div>
     </footer>
 
     <!-- Toast Notification -->
     <div id="toast" class="toast hidden"></div>
 
+    <script src="js/translations.js"></script>
     <script src="js/data.js"></script>
     <script src="js/app.js"></script>
 </body>
