--- a/index.html
+++ b/index.html
@@ -273,6 +273,34 @@
         </div>
     </main>
 
+    <!-- Donation Section -->
+    <div class="donation-section">
+        <div class="container">
+            <div class="donation-card">
+                <div class="donation-header">
+                    <i class="fas fa-coffee donation-icon"></i>
+                    <h3 data-translate="donation_title">Ajude a manter este projeto</h3>
+                    <p data-translate="donation_subtitle">Gostou do manual? Considere doar alguns sats via Lightning Network para tomar um café ☕</p>
+                </div>
+                <div class="donation-content">
+                    <div class="qrcode-container">
+                        <img src="assets/qrcode.jpeg" alt="Lightning Network QR Code" id="donationQRCode" class="qrcode-image">
+                    </div>
+                    <div class="donation-info">
+                        <p class="donation-label" data-translate="donation_scan">Escaneie com sua carteira Lightning:</p>
+                        <div class="lnurl-container">
+                            <code id="lnurlCode" class="lnurl-code">lnurl1dp68gurn8ghj7ampd3kx2ar0veekzar0wd5xjtnrdakj7tnhv4kxctttdehhwm30d3h82unvwqhkjmnpdejhwetpd36xsvfsjrn2rl</code>
+                            <button id="copyLnurlBtn" class="copy-btn" title="Copiar LNURL">
+                                <i class="fas fa-copy"></i>
+                            </button>
+                        </div>
+                        <p class="donation-note" data-translate="donation_note">Ou copie o LNURL acima e use na sua carteira Lightning preferida</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
